<resources>
    <string name="app_name">Polish Reverse Notation</string>
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_equally">=</string>
    <string name="button_ac">AC</string>
    <string name="button_bracket">(</string>
    <string name="button_bracket_reverse">)</string>
    
    <string name="reverse_polish_notation">Reverse polish notation:</string>
    <string name="result">Result:</string>
    <string name="input_expression">Input expression:</string>

    <string name="expression">%1$s%2$s</string>
    <string name="error">Invalid expression</string>
</resources>
