<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        tools:text="@string/result" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewReverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reverse_polish_notation" />

    <TextView
        android:id="@+id/textReverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_expression" />

    <TextView
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:textStyle="bold"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/buttonBracket"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            android:text="@string/button_bracket" />

        <Button
            android:id="@+id/buttonReverseBracket"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            android:text="@string/button_bracket_reverse" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonSeven"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/button_seven" />

        <Button
            android:id="@+id/buttonEight"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/button_eight" />

        <Button
            android:id="@+id/buttonNine"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/button_nine" />

        <Button
            android:id="@+id/buttonDevide"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            android:text="@string/button_divide" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonFour"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/button_four" />

        <Button
            android:id="@+id/buttonFive"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/button_five" />

        <Button
            android:id="@+id/buttonSix"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/button_six" />

        <Button
            android:id="@+id/buttonMultiply"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            android:text="@string/button_multiply" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonOne"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/button_one" />

        <Button
            android:id="@+id/buttonTwo"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/button_two" />

        <Button
            android:id="@+id/buttonThree"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/button_three" />

        <Button
            android:id="@+id/buttonMinus"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            android:text="@string/button_minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonAC"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClearClick"
            android:text="@string/button_ac" />

        <Button
            android:id="@+id/buttonZero"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/button_zero" />

        <Button
            android:id="@+id/buttonEqually"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onResultClick"
            android:text="@string/button_equally" />

        <Button
            android:id="@+id/buttonPlus"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            android:text="@string/button_plus" />
    </LinearLayout>
</LinearLayout>